--- a/style.css
+++ b/style.css
@@ -143,6 +143,9 @@ footer img {
     padding: 15px 30px;
     width: 100%;
     background-color: rgb(255, 255, 255);
+    position: fixed;
+    top: 0;
+    z-index: 100;
   }
   
   #nav-bar-pinterest .nav-left, #nav-bar-pinterest .nav-right {
